--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "prepare": "husky install",
+    "prepare": "node ./scripts/setup.js",
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
